add verificadores se está vazio